[package]
name = "rust-hn-client"
version = "0.1.0"
authors = ["Nicholas Lim <18374483+niclim@users.noreply.github.com>"]
edition = "2018"

[dependencies]
crossterm = "0.17.5"
futures = "0.3.5"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0.111", features = ["derive"]}

[dev-dependencies]
mockito = "0.25.2"
rand = "0.7.3"
serde_json = "1.0"
